--- a/2019-03/server/package.json
+++ b/2019-03/server/package.json
@@ -6,7 +6,9 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "convert-csv-to-json": "0.0.14",
     "cors": "^2.8.5",
+    "csvtojson": "^2.0.8",
     "express": "^4.16.4"
   },
   "scripts": {
