[2019-03] Add server-side validation

--- a/2019-03/docker-compose.yml
+++ b/2019-03/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - ${APP_SERVER_PORT}:${APP_SERVER_PORT}
     volumes:
       - ./server:/server
+      - ./client:/client
     command: yarn run dev
   client:
     build: ./client
