--- a/2019-03/server/Dockerfile
+++ b/2019-03/server/Dockerfile
@@ -8,7 +8,8 @@ ENV PATH=$PATH:/node_modules/.bin
 RUN yarn
 
 WORKDIR /server
-ADD . /server
+ADD /server /server
+ADD /client /client
 
 EXPOSE 8080
 
