--- a/2019-03/server/package.json
+++ b/2019-03/server/package.json
@@ -23,7 +23,9 @@
     "babel-jest": "^24.5.0",
     "babel-loader": "^8.0.5",
     "babel-preset-env": "^1.7.0",
+    "chai": "^4.2.0",
     "jest": "^24.3.1",
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.18.10",
+    "sinon": "^7.3.0"
   }
 }
