--- a/2019-03/client/package.json
+++ b/2019-03/client/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@babel/core": "^7.3.4",
     "babel-eslint": "9.0.0",
+    "babel-preset-env": "^1.7.0",
     "babel-loader": "^8.0.5",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.10.0",
