--- a/2020-01/src/composer.json
+++ b/2020-01/src/composer.json
@@ -7,7 +7,9 @@
     }
   },
   "require": {
-    "php": ">=7"
+    "php": ">=7",
+    "guzzlehttp/guzzle": "~6.0",
+    "symfony/http-kernel": "^4.4"
   },
   "require-dev": {
     "phpunit/phpunit": "*",
